[package]
name = "aptos-container"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
testcontainers = { workspace = true }
container-interface = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }