[package]
name = "container-interface"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }